--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "build:stats": "ANALYZE=true yarn build",
     "debug": "NODE_OPTIONS='--inspect' next dev",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.0.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
@@ -23,13 +28,15 @@
     "eslint-config-next": "13.0.3",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.0.3",
-    "next": "^13.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
+    "next": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5"
