--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
 	"semi": true,
 	"trailingComma": "es5",
 	"singleQuote": true,
-	"tsxSingleQuote": true,
+	"jsxSingleQuote": true,
 	"printWidth": 120,
 	"quoteProps": "as-needed",
 	"tabWidth": 2,
