--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-redux": "^7.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "eslint": "^8.27.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.0.3",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.2",
@@ -33,7 +35,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
